// topology.ietf_network.networks.network.node is generated by proto_generator as a protobuf
// representation of a YANG schema.
//
// Input schema modules:
//  - ../yang/ietf-network-topology.yang
// Include paths:
//   - ../yang/...
syntax = "proto3";

package topology.ietf_network.networks.network.node;

import "github.com/openconfig/ygot/proto/ywrapper/ywrapper.proto";
import "github.com/openconfig/ygot/proto/yext/yext.proto";
import "../models/proto/topology/ietf_network/networks/network/node/termination_point/termination_point.proto";

// SupportingNode represents the /ietf-network/networks/network/node/supporting-node YANG schema element.
message SupportingNode {
}

// SupportingTerminationPointKey represents the /ietf-network/networks/network/node/termination-point/supporting-termination-point YANG schema element.
message SupportingTerminationPointKey {
  string network_ref = 1 [(yext.schemapath) = "/networks/network/node/termination-point/supporting-termination-point/network-ref"];
  string node_ref = 2 [(yext.schemapath) = "/networks/network/node/termination-point/supporting-termination-point/node-ref"];
  string tp_ref = 3 [(yext.schemapath) = "/networks/network/node/termination-point/supporting-termination-point/tp-ref"];
  termination_point.SupportingTerminationPoint supporting_termination_point = 4;
}

// TerminationPoint represents the /ietf-network/networks/network/node/termination-point YANG schema element.
message TerminationPoint {
  repeated SupportingTerminationPointKey supporting_termination_point = 140768545 [(yext.schemapath) = "/networks/network/node/termination-point/supporting-termination-point"];
}
