// topology.ietf_network.networks is generated by proto_generator as a protobuf
// representation of a YANG schema.
//
// Input schema modules:
//  - ../yang/ietf-network-topology.yang
// Include paths:
//   - ../yang/...
syntax = "proto3";

package topology.ietf_network.networks;

import "github.com/openconfig/ygot/proto/ywrapper/ywrapper.proto";
import "github.com/openconfig/ygot/proto/yext/yext.proto";
import "../models/proto/topology/ietf_network/networks/network/network.proto";

// LinkKey represents the /ietf-network/networks/network/link YANG schema element.
message LinkKey {
  string link_id = 1 [(yext.schemapath) = "/networks/network/link/link-id"];
  network.Link link = 2;
}

// NodeKey represents the /ietf-network/networks/network/node YANG schema element.
message NodeKey {
  string node_id = 1 [(yext.schemapath) = "/networks/network/node/node-id"];
  network.Node node = 2;
}

// SupportingNetworkKey represents the /ietf-network/networks/network/supporting-network YANG schema element.
message SupportingNetworkKey {
  string network_ref = 1 [(yext.schemapath) = "/networks/network/supporting-network/network-ref"];
  network.SupportingNetwork supporting_network = 2;
}

// Network represents the /ietf-network/networks/network YANG schema element.
message Network {
  repeated LinkKey link = 398470137 [(yext.schemapath) = "/networks/network/link"];
  network.NetworkTypes network_types = 177559189 [(yext.schemapath) = "/networks/network/network-types"];
  repeated NodeKey node = 74284157 [(yext.schemapath) = "/networks/network/node"];
  repeated SupportingNetworkKey supporting_network = 472095155 [(yext.schemapath) = "/networks/network/supporting-network"];
}
