// topo.ietf_network is generated by proto_generator as a protobuf
// representation of a YANG schema.
//
// Input schema modules:
//  - ./yang/ietf-network-topology.yang
// Include paths:
//   - yang/...
syntax = "proto3";

package topo.ietf_network;

import "github.com/openconfig/ygot/proto/ywrapper/ywrapper.proto";
import "github.com/openconfig/ygot/proto/yext/yext.proto";
import "models/proto/topo/ietf_network/networks/networks.proto";

// NetworkKey represents the /ietf-network/networks/network YANG schema element.
message NetworkKey {
  string network_id = 1 [(yext.schemapath) = "/networks/network/network-id"];
  networks.Network network = 2;
}

// Networks represents the /ietf-network/networks YANG schema element.
message Networks {
  repeated NetworkKey network = 163939622 [(yext.schemapath) = "/networks/network"];
}
